--- a/login_page.html
+++ b/login_page.html
@@ -9,7 +9,7 @@
 <body>
 <header class="d-flex-spacebtw">
     <div class="col-3">
-        <a href="main_page.html"><img class="col-3 col-xl-3" src="css/images/logo_transparent.png" id="logo"></a>
+        <a href="index.html"><img class="col-3 col-xl-3" src="css/images/logo_transparent.png" id="logo"></a>
     </div>
 </header>
     <section id="login-section" class="section">
