--- a/reg_as_customer.html
+++ b/reg_as_customer.html
@@ -10,7 +10,7 @@
     <header id="hdr">
         <div id="menu-list" class="d-flex">
             <div>
-                <a href="main_page.html"><img src="css/images/logo_transparent.png" id="logo"></a>
+                <a href="index.html"><img src="css/images/logo_transparent.png" id="logo"></a>
             </div>
         </div>
     </header>
@@ -30,7 +30,7 @@
                     <input class="input-field" placeholder="your password one more time" type="password">
                 </div>
                 <div class="flex-row-center">
-                    <a class="button-class login-form-btn"  href="main_page.html">cancel</a>
+                    <a class="button-class login-form-btn"  href="index.html">cancel</a>
                     <a class="button-class login-form-btn" href="#reg-cust-sec2">next</a>
                 </div>
             </div>
