--- a/registration_page.html
+++ b/registration_page.html
@@ -10,7 +10,7 @@
     <header id="hdr">
         <div id="menu-list" class="d-flex">
             <div>
-                <a href="main_page.html"><img src="css/images/logo_transparent.png" id="logo"></a>
+                <a href="index.html"><img src="css/images/logo_transparent.png" id="logo"></a>
             </div>
         </div>
     </header>
