--- a/login_page.html
+++ b/login_page.html
@@ -31,7 +31,7 @@
                 </div>
                 <div id="div-btn" class="btn-form">
                     <div id="btn-login-back" class="div-btn-block">
-                        <a id="btn-back" href="main_page.html" class="button-class login-form-btn">back to main page</a>
+                        <a id="btn-back" href="index.html" class="button-class login-form-btn">back to main page</a>
                         <a id="btn-login" href="#" class="button-class login-form-btn">log in</a>
                     </div>
                     <div id="btn-forgot-pass" class="div-btn-block">
