--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 </section>
-<section id="sec2" class="section">
+<section id="sec2" class="section sm-section-height-1_5x section-height-2x">
     <div class="container col-10 flex-row-center flex-lg-column">
         <div class="flex-center col-5 col-lg-9 col-md-11 col-sm-11">
             <img id="img-sec2-block1" src="css/images/img-sec2-block1.png">
@@ -62,7 +62,7 @@
         </div>
     </div>
 </section>
-<section id="sec4" class="section xs-section-height-1x">
+<section id="sec4" class="section  section-height-2x sm-section-height-1_5x">
     <div class="container flex-row-center col-10 flex-lg-column" >
         <div class="col-7 flex-center height-inherit col-sm-12 col-lg-11">
             <div id="sec4-text" class="col-11 text-block text-box-black flex-column-start">
@@ -78,7 +78,7 @@
         </div>
     </div>
 </section>
-<section id="sec5" class="section section-height-2x">
+<section id="sec5" class="section section-height-3x sm-section-height-1_75x">
     <div class="container flex-center flex-lg-column">
         <div class="col-6 col-lg-12 col-sm-12 padding-lg-top padding-xl-top padding-md-top">
             <div class="elem-fit">
